fix timeLeft alignment

--- a/src/resources/elements/timeLeft/timeLeft.scss
+++ b/src/resources/elements/timeLeft/timeLeft.scss
@@ -6,7 +6,6 @@
     font-family: Inter;
     align-self: center;
     white-space: nowrap;
-    width: fit-content;
 
     > .icon {
       margin-right: 5px;
